# swiss-knife

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
.claude/: settings.local.json
electron/: main.cjs  preload.cjs
electron/ipc/: audio.cjs  downloader.cjs  hash.cjs  image.cjs  inspector.cjs  media.cjs  pdf.cjs  settings.cjs  video.cjs
src/: App.jsx  dropHelpers.js  globalDrop.js  index.css  main.jsx  pageCache.js  tauriBridge.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: .gitkeep
src-tauri/src/: main.rs
src-tauri/src/commands/: dialog_commands.rs  download_commands.rs  hash_commands.rs  image_commands.rs  inspector_commands.rs  media_commands.rs  mod.rs  pdf_commands.rs  settings_commands.rs
src/components/: HtkWidget.jsx  Icons.jsx  Sidebar.jsx  SwissKnifeWidget.jsx  ToolKitWidget.jsx  WaveformPlayer.jsx
src/contexts/: ThemeContext.jsx
src/hooks/: useSettings.js
src/pages/: AudioConverter.jsx  Downloader.jsx  FileHasher.jsx  FileInspector.jsx  Home.jsx  ImageConverter.jsx  PdfTools.jsx  Settings.jsx  VideoConverter.jsx
