[package]
name = "hoggies-tool-kit"
version = "1.0.2"
description = "Your all-in-one file conversion and utility toolkit"
authors = ["Hoggie's Tool Kit"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
image = { version = "0.25", features = ["jpeg", "png", "gif", "bmp", "tiff", "webp", "avif"] }
lopdf = "0.34"
reqwest = { version = "0.12", features = ["blocking"] }
dirs = "6"
mime_guess = "2"
base64 = "0.22"
digest = "0.10"
hex = "0.4"
opener = { version = "0.7", features = ["reveal"] }
chrono = "0.4"
regex-lite = "0.1"
tokio = { version = "1", features = ["process", "io-util", "fs", "rt"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
